@@ -75,7 +75,7 @@ function imagepicker_upload_form($form_state, $account=FALSE, $admin = FALSE) {
     '#cols' => 80,
     '#description' => t('Add a description for your image'),
   );
-  if ( imagepicker_image_check_functions() && variable_get('imagepicker_watermark_enable', 0)) {
+  if ( imagepicker_image_check_functions(TRUE) && variable_get('imagepicker_watermark_enable', 0)) {
     if (! variable_get('imagepicker_watermark_image', '')
       && ($user->imagepicker_watermark_image ? $user->imagepicker_watermark_image : FALSE)
       && $user->imagepicker_watermark_enable) {
